--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quieres ser mi 14 de febrero?</title>
+    <title>Me invitas a tu fes el jueves?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Quieres ser mi 14 de febrero?</h1>
+        <h1>Me invitas a tu fes el jueves?</h1>
         <div class="buttons">
             <button class="yes-button" onclick="handleYesClick()">Si</button>
             <button class="no-button" onclick="handleNoClick()">No</button>
